@@ -1,0 +1,194 @@
+<?php
+$lang['admin']['CSS'] = 'CSS'; //needs translation
+$lang['admin']['about'] = '關於';
+$lang['admin']['action'] = '動作';
+$lang['admin']['active'] = '活動的';
+$lang['admin']['addcontent'] = '增加新的內容';
+$lang['admin']['addcss'] = '增加新的CSS';
+$lang['admin']['addcssassociations'] = '增加CSS關聯';
+$lang['admin']['addgroup'] = '增加新的組';
+$lang['admin']['additionaleditors'] = '另外的編輯器';
+$lang['admin']['addlink'] = '增加鏈結';
+$lang['admin']['addseparator'] = '增加分隔符號';
+$lang['admin']['addtemplate'] = '增加新的模板';
+$lang['admin']['adduser'] = '增加新用戶';
+$lang['admin']['addusertag'] = '增加用戶自定義標簽';
+$lang['admin']['adminlog'] = '管理日誌';
+$lang['admin']['adminsystemtitle'] = 'CMS管理系統';
+$lang['admin']['advanced'] = '高級';
+$lang['admin']['aliasalreadyused'] = '別名已在另一頁使用';
+$lang['admin']['aliasmustbelettersandnumbers'] = '別名只能是字母和數位';
+$lang['admin']['aliasnotaninteger'] = '別名不能全部是數位';
+$lang['admin']['assignments'] = '賦值';
+$lang['admin']['associationexists'] = '這個關聯已經存在';
+$lang['admin']['backtoplugins'] = '回到插件列表';
+$lang['admin']['cancel'] = '取消';
+$lang['admin']['clearadminlog'] = '清除管理日誌';
+$lang['admin']['code'] = '代碼';
+$lang['admin']['confirmdefault'] = '你確定要設置站點的默認頁嗎？';
+$lang['admin']['confirmdeletedir'] = '你確定要刪除此目錄和裏面的所有內容嗎？';
+$lang['admin']['content'] = '內容';
+$lang['admin']['contentmanagement'] = '內容管理';
+$lang['admin']['contenttype'] = '內容類別';
+$lang['admin']['copy'] = '複製';
+$lang['admin']['copytemplate'] = '複製模板';
+$lang['admin']['create'] = '創建';
+$lang['admin']['createnewfolder'] = '創建新的文件夾';
+$lang['admin']['cssalreadyused'] = 'CSS名稱已被使用';
+$lang['admin']['cssmanagement'] = 'CSS管理';
+$lang['admin']['currentassociations'] = '當前關聯';
+$lang['admin']['currentcss'] = '當前CSS';
+$lang['admin']['currentdirectory'] = '當前目錄';
+$lang['admin']['currentgroups'] = '當前組';
+$lang['admin']['currentpages'] = '當前頁';
+$lang['admin']['currenttemplates'] = '當前模板';
+$lang['admin']['currentusers'] = '當前用戶';
+$lang['admin']['custom404'] = '自定義404錯誤資訊';
+$lang['admin']['database'] = '資料庫';
+$lang['admin']['databaseprefix'] = '資料庫字首';
+$lang['admin']['databasetype'] = '資料庫類型';
+$lang['admin']['date'] = '日期';
+$lang['admin']['default'] = '默認';
+$lang['admin']['delete'] = '刪除';
+$lang['admin']['deleteconfirm'] = '你確定要刪除嗎？';
+$lang['admin']['deletecss'] = '刪除CSS';
+$lang['admin']['directoryexists'] = '此目錄已經存在';
+$lang['admin']['down'] = '向下';
+$lang['admin']['edit'] = '編輯';
+$lang['admin']['editconfiguration'] = '編輯結構';
+$lang['admin']['editcontent'] = '編輯內容';
+$lang['admin']['editcss'] = '編輯CSS';
+$lang['admin']['editgroup'] = '編輯組';
+$lang['admin']['editlink'] = '編輯鏈結';
+$lang['admin']['editpage'] = '編輯頁面';
+$lang['admin']['editseparator'] = '編輯分隔符號';
+$lang['admin']['edittemplate'] = '編輯模板';
+$lang['admin']['edituser'] = '編輯用戶';
+$lang['admin']['editusertag'] = '編輯用戶自定義標簽';
+$lang['admin']['errorchildcontent'] = '目錄內仍有子目錄，請首先刪除它們';
+$lang['admin']['errorcopyingtemplate'] = '複製模板錯誤';
+$lang['admin']['errorcreatingassociation'] = '創建關聯錯誤';
+$lang['admin']['errorcssinuse'] = '此CSS仍被模板或頁面使用，請首先刪除這些關聯。';
+$lang['admin']['errordefaultpage'] = '無法刪除當前默認頁，請首先設置一個不同的默認頁。';
+$lang['admin']['errordeletingassociation'] = '刪除關聯錯誤';
+$lang['admin']['errordeletingcss'] = '刪除CSS錯誤';
+$lang['admin']['errordeletingdirectory'] = '無法刪除目錄。是否有相關許可權？';
+$lang['admin']['errordeletingfile'] = '無法刪除文件。是否有相關許可權？';
+$lang['admin']['errorgettingcssname'] = '讀取CSS名稱錯誤';
+$lang['admin']['errorgettingtemplatename'] = '讀取模板名稱錯誤';
+$lang['admin']['errorinsertingcss'] = '插入CSS錯誤';
+$lang['admin']['errorinsertinggroup'] = '插入組錯誤';
+$lang['admin']['errorinsertingpage'] = '插入頁錯誤';
+$lang['admin']['errorinsertingtag'] = '插入用戶標簽錯誤';
+$lang['admin']['errorinsertingtemplate'] = '插入模板錯誤';
+$lang['admin']['errorinsertinguser'] = '插入用戶錯誤';
+$lang['admin']['errorretrievingcss'] = '插入CSS錯誤';
+$lang['admin']['errorretrievingtemplate'] = '檢索模板錯誤';
+$lang['admin']['errortemplateinuse'] = '該模板仍被頁面使用，請首先移除它。';
+$lang['admin']['errorupdatingcontent'] = '更新內容錯誤';
+$lang['admin']['errorupdatingcss'] = '更新CSS錯誤';
+$lang['admin']['errorupdatinggroup'] = '更新組錯誤';
+$lang['admin']['errorupdatingtemplate'] = '更新模板錯誤';
+$lang['admin']['errorupdatinguser'] = '更新用戶錯誤';
+$lang['admin']['errorupdatingusertag'] = '更新用戶標簽錯誤';
+$lang['admin']['erroruserinuse'] = '此用戶仍擁有內容頁，在刪除前請將所有權改爲另一用戶';
+$lang['admin']['errrochildcontent'] = '無法刪除帶有下一級內容的頁面，請首先移除下一級內容'; //needs translation
+$lang['admin']['false'] = '錯誤的';
+$lang['admin']['filecreatedirnodoubledot'] = '目錄不能包含\'..\' 。';
+$lang['admin']['filecreatedirnoname'] = '不能創建空名字的目錄。';
+$lang['admin']['filecreatedirnoslash'] = '目錄不能包含\'/\'或者\'\\\' 。';
+$lang['admin']['filemanagement'] = '文件管理';
+$lang['admin']['filename'] = '檔案名';
+$lang['admin']['filenotuploaded'] = '無法上傳文件。是否有相關許可權？';
+$lang['admin']['filesize'] = '文件大小';
+$lang['admin']['groupmanagement'] = '組管理';
+$lang['admin']['headtags'] = '文件頭';
+$lang['admin']['help'] = '幫助';
+$lang['admin']['helpaddcontent'] = '<p>該頁允許你創建新的目錄。請選擇一個目錄類型並填入必需的資訊即可創建新的內容。如果你選擇在功能表中顯示，並使用了自動功能表工具{dhtmlmenu}或者{bulletmenu}，那麽新的目錄將會在功能表中自動顯示出來。</p><p>你可以在用戶管理中通過編輯你的用戶爲WYSIWYG編輯器設置你的首選項。爲防止出錯，你可以創建複合目錄，或者簡單的從另一個站點中已有的目錄裏剪切和粘貼。</p>';
+$lang['admin']['helpaddtemplate'] = '<p>模板是控制你的站點目錄的外觀和效果的。</p><p>在此創建你的頁面佈局並在風格圖表中添加你的CSS以控制你的不同部分的外觀。</p>';
+$lang['admin']['helpeditcontent'] = '<p>該頁允許你修改你的頁面當前的目錄，用於生成功能表的上一級目錄。你也可以修改功能表裏當前顯示的文字，頁面的標題，修改所有者，並爲所選的目錄分配另外的編輯器。</p><p>如果你選擇使用頁面別名，以頁面別名代替內部頁面ID號碼作爲參數，將使得由功能表自動生成的鏈結更加易讀。</p>';
+$lang['admin']['helplistcontent'] = '<p>這是主目錄頁，作爲編輯所有目錄的初始點。<br>該頁允許你通過使用自動功能表系統重新安排你的目錄等級，以及刪除、編輯和創建新的目錄。</p><p>在<i>Default</i>欄裏點擊<u>False</u>鏈結將頁面設置爲默認頁（當找不到所要的頁面時就會顯示該頁）。</p>';
+$lang['admin']['helplisttemplate'] = '<p>該頁允許你編輯、刪除和創建模板。</p><p>點擊<u>Add New Template</u>按鈕創建新的模板。</p><p>如果你希望所有的目錄頁面都使用同一個模板，點擊 <u>Set All Content</u>鏈結</p><p>如果你希望複製一個模板，點擊<u>Copy</u>圖示，將會提示你爲新複製的模板命名。</p>';
+$lang['admin']['hostname'] = '主機名';
+$lang['admin']['idnotvalid'] = '所給的ID不存在';
+$lang['admin']['informationmissing'] = '缺少資訊';
+$lang['admin']['install'] = '安裝';
+$lang['admin']['invalidcode'] = '輸入的代碼無效';
+$lang['admin']['invalidtemplate'] = '模板不存在';
+$lang['admin']['itemid'] = '條款ID';
+$lang['admin']['itemname'] = '條款名稱';
+$lang['admin']['language'] = '語言';
+$lang['admin']['logout'] = '登出';
+$lang['admin']['menutext'] = '功能表文本';
+$lang['admin']['missingparams'] = '缺少某些參數或參數無效';
+$lang['admin']['modifygroupassignments'] = '修改組賦值';
+$lang['admin']['moduleabout'] = '關於%s模組';
+$lang['admin']['modulehelp'] = '%s模組的幫助';
+$lang['admin']['moduleinterface'] = '%s介面';
+$lang['admin']['modules'] = '模組';
+$lang['admin']['move'] = '移動';
+$lang['admin']['name'] = '名稱';
+$lang['admin']['needpermissionto'] = '你需要\'%s\'許可來執行此功能 ';
+$lang['admin']['newtemplatename'] = '新的模板名稱';
+$lang['admin']['next'] = '下一步';
+$lang['admin']['noaccessto'] = '沒有%s的入口';
+$lang['admin']['nocss'] = '沒有CSS';
+$lang['admin']['noentries'] = '沒有入口';
+$lang['admin']['nofieldgiven'] = '沒有指定%s！';
+$lang['admin']['nofiles'] = '沒有文件';
+$lang['admin']['nopasswordmatch'] = '密碼不正確';
+$lang['admin']['norealdirectory'] = '沒有指定目錄';
+$lang['admin']['norealfile'] = '沒有指定文件';
+$lang['admin']['notinstalled'] = '沒有安裝';
+$lang['admin']['owner'] = '擁有者';
+$lang['admin']['pagealias'] = '頁面別名';
+$lang['admin']['parent'] = '源';
+$lang['admin']['password'] = '密碼';
+$lang['admin']['passwordagain'] = '密碼（重復）';
+$lang['admin']['permission'] = '許可';
+$lang['admin']['permissions'] = '許可';
+$lang['admin']['permissionsforgroup'] = '%s組的許可';
+$lang['admin']['pluginabout'] = '關於%s標簽';
+$lang['admin']['pluginhelp'] = '%s標簽的幫助';
+$lang['admin']['pluginmanagement'] = '插件管理';
+$lang['admin']['preview'] = '預覽';
+$lang['admin']['previous'] = '上一步';
+$lang['admin']['removecssassociation'] = '刪除CSS關聯';
+$lang['admin']['saveconfig'] = '保存配置';
+$lang['admin']['send'] = '發送';
+$lang['admin']['setallcontent'] = '設置所有頁面';
+$lang['admin']['setallcontentconfirm'] = '你確定要使用該模板設置所有頁面嗎？';
+$lang['admin']['showinmenu'] = '在功能表中顯示';
+$lang['admin']['showsite'] = '顯示站點';
+$lang['admin']['sitedownmessage'] = '站點關閉資訊';
+$lang['admin']['siteprefs'] = '站點參數選擇';
+$lang['admin']['status'] = '狀態';
+$lang['admin']['stylesheet'] = '風格圖表';
+$lang['admin']['submit'] = '提交';
+$lang['admin']['tags'] = '標簽';
+$lang['admin']['template'] = '模板';
+$lang['admin']['templateexists'] = '模板名稱已存在';
+$lang['admin']['templatemanagement'] = '模板管理';
+$lang['admin']['title'] = '標題';
+$lang['admin']['tools'] = '工具';
+$lang['admin']['true'] = '正確的';
+$lang['admin']['type'] = '類別';
+$lang['admin']['typenotvalid'] = '類別不存在';
+$lang['admin']['uninstall'] = '卸載';
+$lang['admin']['uninstallconfirm'] = '你確定要卸載嗎？';
+$lang['admin']['up'] = '向上';
+$lang['admin']['uploadfile'] = '上傳文件';
+$lang['admin']['url'] = 'URL';
+$lang['admin']['useadvancedcss'] = '使用高級CSS管理';
+$lang['admin']['user'] = '用戶';
+$lang['admin']['usermanagement'] = '用戶管理';
+$lang['admin']['username'] = '用戶名';
+$lang['admin']['usernameincorrect'] = '用戶名或密碼錯誤';
+$lang['admin']['userprefs'] = '用戶參數';
+$lang['admin']['usersassignedtogroup'] = '用戶指定到%s組';
+$lang['admin']['usertagexists'] = '使用此名稱的插件已存在，請選擇另一個。'; //needs translation
+$lang['admin']['usewysiwyg'] = '爲內容使用WYSIWYG編輯器';
+$lang['admin']['version'] = '版本';
+$lang['admin']['view'] = '瀏覽';
+$lang['admin']['welcomemsg'] = '歡迎%s';
+?>
